// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account component renders correctly with empty user data 1`] = `
<DocumentFragment>
  <div
    class="account"
  >
    <div
      class="sub-page"
    >
      <div
        class="subpage-header"
      >
        <h3
          class="mb-0"
        >
          Account Details
        </h3>
      </div>
      <div
        class="subpage-body"
      >
        <div
          class="account-details"
        >
          <div
            class="info"
          >
            <div
              class="desc"
            >
              <p
                class="one-line-ellipsis mr-3"
              >
                <span
                  class="provider-email"
                >
                  Logged in With 
                </span>
              </p>
              <span
                class="custom-badge custom-badge-secondary"
                style="border-radius: 3px;"
              >
                Member
              </span>
            </div>
          </div>
          <form>
            <div
              class="row"
            >
              <div
                class="col-12 col-md-6"
              >
                <div
                  class="input-box "
                >
                  <label>
                    First Name
                  </label>
                  <div
                    class="input-text-block"
                  >
                    <input
                      autocomplete="on"
                      class="input-text"
                      name="firstName"
                      placeholder="Please Enter Your First Name"
                      type="text"
                      value=""
                    />
                  </div>
                  <span
                    class="invalid-message"
                  />
                </div>
              </div>
              <div
                class="col-12 col-md-6"
              >
                <div
                  class="input-box "
                >
                  <label>
                    Last Name
                  </label>
                  <div
                    class="input-text-block"
                  >
                    <input
                      autocomplete="on"
                      class="input-text"
                      name="lastName"
                      placeholder="Please Enter Your Last Name"
                      type="text"
                      value=""
                    />
                  </div>
                  <span
                    class="invalid-message"
                  />
                </div>
              </div>
              <div
                class="col-12 col-md-12"
              >
                <div
                  class="input-box "
                >
                  <label>
                    Phone Number
                  </label>
                  <div
                    class="input-text-block"
                  >
                    <input
                      autocomplete="on"
                      class="input-text"
                      name="phoneNumber"
                      placeholder="Please Enter Your Phone Number"
                      type="text"
                      value=""
                    />
                  </div>
                  <span
                    class="invalid-message"
                  />
                </div>
              </div>
            </div>
            <hr />
            <div
              class="profile-actions"
            >
              <button
                class="input-btn custom-btn-secondary md text-only icon-left "
                style="border-radius: 3px;"
                type="submit"
              >
                <span
                  class="btn-text"
                >
                  Save changes
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Account component renders correctly with user data 1`] = `
<DocumentFragment>
  <div
    class="account"
  >
    <div
      class="sub-page"
    >
      <div
        class="subpage-header"
      >
        <h3
          class="mb-0"
        >
          Account Details
        </h3>
      </div>
      <div
        class="subpage-body"
      >
        <div
          class="account-details"
        >
          <div
            class="info"
          >
            <div
              class="desc"
            >
              <p
                class="one-line-ellipsis mr-3"
              >
                <span
                  class="provider-email"
                >
                  Logged in With 
                </span>
              </p>
              <span
                class="custom-badge custom-badge-secondary"
                style="border-radius: 3px;"
              >
                Member
              </span>
            </div>
          </div>
          <form>
            <div
              class="row"
            >
              <div
                class="col-12 col-md-6"
              >
                <div
                  class="input-box "
                >
                  <label>
                    First Name
                  </label>
                  <div
                    class="input-text-block"
                  >
                    <input
                      autocomplete="on"
                      class="input-text"
                      name="firstName"
                      placeholder="Please Enter Your First Name"
                      type="text"
                      value="John"
                    />
                  </div>
                  <span
                    class="invalid-message"
                  />
                </div>
              </div>
              <div
                class="col-12 col-md-6"
              >
                <div
                  class="input-box "
                >
                  <label>
                    Last Name
                  </label>
                  <div
                    class="input-text-block"
                  >
                    <input
                      autocomplete="on"
                      class="input-text"
                      name="lastName"
                      placeholder="Please Enter Your Last Name"
                      type="text"
                      value="Doe"
                    />
                  </div>
                  <span
                    class="invalid-message"
                  />
                </div>
              </div>
              <div
                class="col-12 col-md-12"
              >
                <div
                  class="input-box "
                >
                  <label>
                    Phone Number
                  </label>
                  <div
                    class="input-text-block"
                  >
                    <input
                      autocomplete="on"
                      class="input-text"
                      name="phoneNumber"
                      placeholder="Please Enter Your Phone Number"
                      type="text"
                      value=""
                    />
                  </div>
                  <span
                    class="invalid-message"
                  />
                </div>
              </div>
            </div>
            <hr />
            <div
              class="profile-actions"
            >
              <button
                class="input-btn custom-btn-secondary md text-only icon-left "
                style="border-radius: 3px;"
                type="submit"
              >
                <span
                  class="btn-text"
                >
                  Save changes
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
